<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".dept.CSEDept"
    tools:showIn="@layout/activity_csedept">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">



                    <TextView
                        android:id="@+id/cp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/cp1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:id="@+id/cp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cp1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/cp2"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/two"
        android:layout_below="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_cse"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">



                    <TextView
                        android:id="@+id/ip1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/ip1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:id="@+id/ip2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ip1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/ip2"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>





    </LinearLayout>

</RelativeLayout>



</android.support.v4.widget.NestedScrollView>